# alibaba_cloud_sdk_rust

./: Cargo.toml
src/: lib.rs
src/sdk/auth/: mod.rs
src/sdk/auth/credentials/: mod.rs
src/sdk/auth/singers/: rpc_signature_composer.rs
src/sdk/requests/: mod.rs
src/sdk/responses/: mod.rs
src/services/: mod.rs
src/services/dysmsapi/: alimail.rs  client.rs  mod.rs  send_sms.rs
